News UAT/force-app/main/default/objects/CS_Integration_Settings__mdt/CS_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Configurable parameters for integration calls.
Used by utility classes that implement the CS_Questionnaire_Interface</description>
    <label>CS Integration Settings</label>
    <pluralLabel>CS_Integration_Settings</pluralLabel>
</CustomObject>