News UAT/force-app/main/default/objects/CS_Integration_Settings__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Used by GeoNames (AU/NZ)</description>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>