News UAT/force-app/main/default/objects/CS_Integration_Settings__mdt/fields/MaxRows__c.field-meta.xml
<CustomField>
    <fullName>MaxRows__c</fullName>
    <description>Used by GeoNames</description>
    <label>MaxRows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>