News UAT/force-app/main/default/objects/CS_Integration_Settings__mdt/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <description>Name of the method to append to the endpoint</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>